<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">


    <item
        android:id="@+id/anasayafa"
        app:showAsAction="ifRoom|withText"
        android:title="@string/anasayfa"
        android:icon="@drawable/ic_action_home"/>
    <item
        android:id="@+id/afsduygulmaKapat"
        android:icon="@drawable/ic_action_toc"
        app:showAsAction="always"
        android:title="@string/goster" >
        <menu>

            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_action_profile"
                android:title="@string/profil_goruntule"
                />

            <item
                android:id="@+id/diliDegistir"
                android:icon="@drawable/ic_action_translate"
                android:title="@string/dil_degistir" />

            <item
                android:id="@+id/cikisi_yap"
                android:icon="@drawable/ic_action_exit"
                android:title="@string/cikis_yap"
                />
            <item
                android:id="@+id/uygulmaKapat"
                android:icon="@drawable/ic_action_power"
                android:title="@string/uyg_kapat" />
        </menu>
    </item>







</menu>