<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mehmetmetin436.proje.KaydolActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ad" />
                    <EditText
                        android:id="@+id/edAd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soyad" />
                    <EditText
                        android:id="@+id/edSoyad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kulAd" />

                    <EditText
                        android:id="@+id/edKulad"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parola" />
                    <EditText
                        android:id="@+id/edSifre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/t4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parolaTkr" />
                    <EditText
                        android:id="@+id/edSifreTekrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resimEkle"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kitapResmi"
                        android:id="@+id/btnKitapResmi"
                        android:onClick="resimClicked"/>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100px"
                        android:layout_height="100px"
                        />
                </TableRow>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kaydol"
                    android:id="@+id/butonKaydol"
                    android:onClick="kayitClicked"/>
            </TableLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
